# svt-av1-psy

./: .clang-format  .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE-BSD2.md  LICENSE.md  NOTICES.md  README.md  README_UPSTREAM.md  STYLE.md  appveyor.yml  svt-av1-psy.spec
Source/App/: CMakeLists.txt  EbAppConfig.c  EbAppConfig.h  EbAppContext.c  EbAppContext.h  EbAppInputy4m.c  EbAppInputy4m.h  EbAppMain.c  EbAppOutputivf.h  EbAppProcessCmd.c  app_config.c  app_config.h  app_context.c  app_context.h  app_input_y4m.c  app_input_y4m.h  app_main.c  app_output_ivf.c  app_output_ivf.h  app_process_cmd.c  svt_time.c  svt_time.h
Source/App/DecApp/: CMakeLists.txt  EbDecAppMain.c  EbDecParamParser.c  EbDecParamParser.h  EbDecTime.c  EbDecTime.h  EbFileUtils.c  EbFileUtils.h  EbMD5Utility.c  EbMD5Utility.h
Source/App/EncApp/: CMakeLists.txt  EbAppConfig.c  EbAppConfig.h  EbAppContext.c  EbAppContext.h  EbAppFifo.c  EbAppInputy4m.c  EbAppInputy4m.h  EbAppMain.c  EbAppOutputivf.c  EbAppOutputivf.h  EbAppProcessCmd.c  EbAppString.c  EbAppString.h  EbString.c  EbString.h  EbTime.c  EbTime.h
Source/App/SimpleApp/: CMakeLists.txt
Source/Lib/: CMakeLists.txt  pkg-config.pc.in
Source/Lib/ASM_AVX2/: CMakeLists.txt  EbCdef_AVX2.c  EbCombinedAveragingSAD_Intrinsic_AVX2.c  EbCombinedAveragingSAD_Intrinsic_AVX2.h  EbComputeSAD_AVX2.h  EbComputeSAD_Intrinsic_AVX2.c  EbHighbdIntraPrediction_AVX2.c  EbIntraPrediction_AVX2.h  EbIntraPrediction_Intrinsic_AVX2.c  EbMemory_AVX2.h  EbNoiseExtractAVX2.c  EbNoiseExtractAVX2.h  EbPackUnPack_Intrinsic_AVX2.c  EbPictureOperators_AVX2.h  EbPictureOperators_Intrinsic_AVX2.c  EbRestorationPick_AVX2.c  EbTransforms_AVX2.h  EbTransforms_Intrinsic_AVX2.c  aom_subpixel_8t_intrin_avx2.c  av1_inv_txfm_avx2.c  av1_inv_txfm_avx2.h  blend_a64_mask_avx2.c  cdef_avx2.c  cdef_block_avx2.c  cdef_block_simd.c  cfl_avx2.c  comb_avg_sad_intrin_avx2.c  combined_averaging_sad_intrinsic_avx2.c  compute_sad_avx2.h  compute_sad_intrin_avx2.c  compute_sad_intrinsic_avx2.c  convolve_2d_avx2.c  convolve_avx2.c  convolve_avx2.h  corner_match_avx2.c  encodetxb_avx2.c  fft_avx2.c  highbd_convolve_2d_avx2.c  highbd_convolve_avx2.c  highbd_fwd_txfm_avx2.c  (+39 more)
Source/Lib/ASM_AVX512/: CMakeLists.txt  cdef_avx512.c  cdef_block_avx512.c  compute_sad_intrin_avx512.c  compute_sad_intrinsic_avx512.c  convolve_2d_avx512.c  convolve_avx512.c  convolve_avx512.h  encodetxb_avx512.c  highbd_fwd_txfm_AVX512.c  highbd_intra_pred_avx512.c  highbd_intra_prediction_avx512.c  highbd_inv_txfm_avx512.c  jnt_convolve_2d_avx512.c  jnt_convolve_avx512.c  pic_operators_intrin_avx512.c  pickrst_avx512.c  picture_operators_intrinsic_avx512.c  transpose_avx512.h  variance_avx512.c  wiener_convolve_avx512.c
Source/Lib/ASM_NEON/: CMakeLists.txt  EbCdef_neon.c  EbPictureOperators_Intrinsic_neon.c  EbTemporalFiltering_neon.c  EbTransforms_neon.c  aom_convolve8_neon.c  aom_convolve8_neon.h  av1_inv_txfm_neon.c  av1_inv_txfm_neon.h  av1_quantize_neon.c  blend_a64_mask_neon.c  block_error_neon.c  cdef_block_neon.c  cdef_filter_block_neon.c  cdef_neon.c  cfl_neon.c  compound_convolve_neon.c  compound_convolve_neon.h  compute_sad_neon.c  convolve_2d_neon.c  convolve_neon.c  convolve_neon.h  deblocking_filter_intrinsic_neon.c  encodetxb_neon.c  hadmard_path_neon.c  highbd_convolve_2d_neon.c  highbd_convolve_neon.c  highbd_fwd_txfm_neon.c  highbd_inv_txfm_neon.c  highbd_jnt_convolve_neon.c  highbd_jnt_convolve_neon.h  highbd_jnt_convolve_neon_y.c  highbd_pickrst_neon.c  highbd_txfm_utility_neon.h  highbd_variance_neon.c  intra_prediction_neon.c  itx.S  mem_neon.h  obmc_constants_neon.h  obmc_sad_neon.c  (+19 more)
Source/Lib/ASM_NEON_DOTPROD/: CMakeLists.txt  aom_convolve8_neon_dotprod.c  convolve_neon_dotprod.c  highbd_variance_neon_dotprod.c  jnt_convolve_neon_dotprod.c  variance_neon_dotprod.c
Source/Lib/ASM_NEON_I8MM/: CMakeLists.txt  aom_convolve8_neon_i8mm.c  convolve_neon_i8mm.c  jnt_convolve_neon_i8mm.c
Source/Lib/ASM_SSE2/: CMakeLists.txt  EbAvcStyleMcp_Intrinsic_SSE2.c  EbAvcStyleMcp_SSE2.h  EbCombinedAveragingSAD_Intrinsic_SSE2.c  EbComputeMean_Intrinsic_SSE2.c  EbComputeMean_SSE2.h  EbComputeSAD_SSE2.h  EbDeblockingFilter_Intrinsic_SSE2.c  EbDeblockingFilter_SSE2.h  EbIntrinMacros_SSE2.h  (+55 more)
gstreamer-plugin/: CMakeLists.txt  README.md  gstsvtav1enc.c
test/: .clang-format  AVCStyleMcpTest.cc  AdaptiveScanTest.cc  BitstreamReaderMock.cc  BitstreamReaderMock.h  BitstreamWriterTest.cc  BlockErrorTest.cc  CMakeLists.txt  CdefTest.cc  CompoundUtilTest.cc  Convolve8Test.cc  DeblockTest.cc  Doxyfile  EbBlend_a64_mask_1d_test.cc  EbBlend_a64_mask_test.cc  EbHighbdIntraPredictionTests.cc  EbHighbdIntraPredictionTests.h  EbNNPredictTests.cc  EbNoiseModel_test.cc  EbSatdTest.cc  EbUnitTest.h  EbUnitTestUtility.c  EbUnitTestUtility.h  EncodeTxbAsmTest.cc  FFTTest.cc  FilmGrainExpectedResult.h  FilmGrainTest.cc  FilterIntraPredTest.cc  ForwardtransformTests.cc  FwdTxfm1dTest.cc  FwdTxfm2dAsmTest.cc  FwdTxfm2dTest.cc  GlobalMotionUtilTest.cc  HbdVarianceTest.cc  IntraBcUtilTest.cc  InvTxfm1dTest.cc  InvTxfm2dAsmTest.cc  InversetransformTests.cc  MotionEstimationTest.cc  NoiseExtractTest.cc  (+59 more)
test/api_test/: CMakeLists.txt  SvtAv1EncApiTest.cc  SvtAv1EncApiTest.h  SvtAv1EncParamsTest.cc  params.h
test/e2e_test/: CMakeLists.txt  CompareTools.h  ConfigEncoder.cc  ConfigEncoder.h  DummyVideoSource.h  E2eTestVectors.h  EbDecBitstream.c  FrameQueue.cc  FrameQueue.h  ParseUtil.cc  ParseUtil.h  PerformanceCollect.cc  PerformanceCollect.h  RefDecoder.cc  RefDecoder.h  SvtAv1E2EFramework.cc  SvtAv1E2EFramework.h  SvtAv1E2EParamsTest.cc  SvtAv1E2ETest.cc  VideoFrame.h  VideoSource.cc  VideoSource.h  Y4mVideoSource.cc  Y4mVideoSource.h  YuvVideoSource.cc  YuvVideoSource.h  dec_bitstream.c  dec_bitstream.h  libaom_dependency.cmake  test_data_download_worker.cmake  test_data_util.cmake  test_vector_list.txt
test/ref/: EbComputeMean_C.c  EncodeTxbRef.h  TxfmRef.cc  TxfmRef.h
test/vectors/: conformance_test.cfg  longtime_comformance_test.cfg  smoking_test.cfg  video_src.cfg
(+1725 files in other folders)
